k8s/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: apps
  labels:
    app: homepage
spec:
  selector:
    app: homepage
  ports:
    - port: 3000
      targetPort: 3000
